--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,15 +4,29 @@ aiohttp==3.13.0
 aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.11.0
+asgiref==3.10.0
 async-timeout==5.0.1
 attrs==25.4.0
+cachetools==6.2.1
 certifi==2025.10.5
 charset-normalizer==3.4.3
 Deprecated==1.2.18
 distro==1.9.0
+dj-database-url==3.0.1
+Django==5.2.7
+djangorestframework==3.16.1
+dotenv==0.9.9
 exceptiongroup==1.3.0
 frozenlist==1.8.0
 future==1.0.0
+google-api-core==2.26.0
+google-auth==2.41.1
+google-cloud-secret-manager==2.25.0
+googleapis-common-protos==1.70.0
+grpc-google-iam-v1==0.14.3
+grpcio==1.75.1
+grpcio-status==1.75.1
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -21,17 +35,26 @@ jiter==0.11.0
 line-bot-sdk==3.19.1
 multidict==6.7.0
 openai==2.3.0
+packaging==25.0
 propcache==0.4.1
+proto-plus==1.26.1
+protobuf==6.33.0
+psycopg2-binary==2.9.11
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pydantic==2.12.0
 pydantic_core==2.41.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 requests==2.32.5
+rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
+sqlparse==0.5.3
 tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.5.0
+whitenoise==6.11.0
 wrapt==1.17.3
 yarl==1.22.0
