fix prod setting

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -23,7 +23,4 @@ COPY . .
 # 7. 執行 collectstatic，收集所有靜態檔案 (例如 Admin 的 CSS)
 RUN python3 manage.py collectstatic --noinput
 
-# 8. 設定 Gunicorn 啟動指令
-# Cloud Run 會自動設定 $PORT 環境變數
-# Gunicorn 會監聽 0.0.0.0 (所有 IP) 上的 $PORT
-CMD gunicorn --bind 0.0.0.0:$PORT --workers 2 ai_service.wsgi:application
+CMD ["./startup.sh"]
