--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 # Dockerfile
 
 # 1. 使用官方的 Python 3.10 slim 鏡像
-FROM python:3.10-slim
+FROM python:3.12-slim
 
 # 2. 設定環境變數，讓 Python 輸出更即時
 ENV PYTHONUNBUFFERED 1
@@ -19,6 +19,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # 6. 複製整個專案程式碼到工作目錄
 COPY . .
+
+RUN chmod +x /app/startup.sh
 
 # 7. 執行 collectstatic，收集所有靜態檔案 (例如 Admin 的 CSS)
 RUN python3 manage.py collectstatic --noinput
