--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -36,6 +36,7 @@ line-bot-sdk==3.19.1
 multidict==6.7.0
 openai==2.3.0
 packaging==25.0
+Pillow==11.0.0
 propcache==0.4.1
 proto-plus==1.26.1
 protobuf==6.33.0
