--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,7 +15,6 @@ distro==1.9.0
 dj-database-url==3.0.1
 Django==5.2.7
 djangorestframework==3.16.1
-dotenv==0.9.9
 exceptiongroup==1.3.0
 frozenlist==1.8.0
 future==1.0.0
@@ -59,3 +58,4 @@ urllib3==2.5.0
 whitenoise==6.11.0
 wrapt==1.17.3
 yarl==1.22.0
+django-storages[google]
